@@ -1,1 +1,20 @@
 # Java-9-High-Performance
+```
+java --list-modules
+```
+
+```
+java --list-modules java.base
+```
+
+```
+java --list-modules java.desktop
+```
+
+```
+$jlink --module-path $JAVA_HOME/jmods:mlib --add-modules java.desktop --output myawesomeimage
+```
+
+```
+myawesomeimage/bin/java --list-modules
+```
